Fixes example.html in dark mode, CSS and JS cleanup
This commit does:

- Moves some contents from _variables.scss that was being doubly-echoed
  in the final main.css compilation.
- Replaces /* comments with // in the SCSS so that some comments don't
  get conveyed to the final main.css compilation.
- Adds some styles to example.css and eighties.css so that they are both
  readable (with sufficient contrast) in light and dark mode
- Modernizes CSS of example.css and eighties.css to use nesting, now natively supported in regular CSS
- Removes some explicit styles from example.css that are already handled
  by the Primitive UI base CSS.
- Applies "alternate-background" class to top section and aside
- Replaces placeholder.it (defunct) with placehold.co (new)
- Removes rogue style override in h3 on demo page
- Corrects a jQuery selector to allow it to accommodate
  "eighties.css?version=2" (it previously was failing to switch back)
- Modified the scroll/click functions in the JS file to address two
  minor behaviors: double firing (on click) and overzealous scroll
handling.

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,9 +1,10 @@
 @use "sass:color";
-/**
- * Variables
- *
- * The majority of the configuration for the toolkit.
- */
+
+//
+// Variables
+//
+// The majority of the configuration for the toolkit.
+//
 
 //==============================================================================
 // Containers
@@ -21,25 +22,6 @@ $large: 1200px !default;
 $mobile: $x-small !default;
 $tablet: $small !default;
 $desktop: $medium !default;
-
-//==============================================================================
-// Global Colors
-//==============================================================================
-
-@media (prefers-color-scheme: light) {
-  .dark-only {
-    display: none;
-  }
-}
-@media (prefers-color-scheme: dark) {
-  .light-only {
-     display: none;
-   }
-}
-:root {
-  // Critical for being able to use the light-dark() function
-  color-scheme: light dark;
-}
 
 //== Named Colors ==============================================================
 // Each of these should be a single value only.
